# openai-batch

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
openai_batch/: __init__.py  _utils.py  batch.py  create_batch_input.py  providers.py  run.py
tests/: test_basic.py  test_create.py  test_live.py  test_run.py  test_utils.py
