[project]
name = "openai-batch"
description = "Make the OpenAI batch protocol easy to use."
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "openai",
]

[project.optional-dependencies]
test = [
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py38']
